--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "mcp-acs-testing",
   "displayName": "MCP ACS Testing Manager",
-  "description": "Comprehensive testing capabilities for AI agents with MCP integration. Run tests, analyze coverage, generate tests, debug failures, and manage the complete testing lifecycle. Part of the Digital Defiance AI Capabilities Suite.",
-  "version": "0.1.2",
+  "description": "AI-powered testing insights and analysis. Discover tests, generate test cases, analyze coverage gaps, detect flaky tests, and get intelligent testing suggestions. Works with any test framework via VS Code's Testing API.",
+  "version": "0.1.3",
   "packageManager": "yarn@4.12.0",
   "publisher": "DigitalDefiance",
   "icon": "images/icon.png",
@@ -112,6 +112,11 @@
         "command": "mcp-testing.toggleCoverage",
         "title": "MCP Testing: Toggle Coverage Display",
         "icon": "$(eye)"
+      },
+      {
+        "command": "mcp-testing.toggleCoverageMode",
+        "title": "MCP Testing: Toggle Coverage Collection",
+        "icon": "$(graph)"
       },
       {
         "command": "mcp-testing.showCoverageReport",
@@ -469,12 +474,17 @@
         {
           "command": "mcp-testing.refreshTests",
           "when": "view == mcp-testing-tests",
-          "group": "navigation"
+          "group": "navigation@1"
+        },
+        {
+          "command": "mcp-testing.toggleCoverageMode",
+          "when": "view == mcp-testing-tests",
+          "group": "navigation@2"
         },
         {
           "command": "mcp-testing.runTests",
           "when": "view == mcp-testing-tests",
-          "group": "navigation"
+          "group": "navigation@3"
         },
         {
           "command": "mcp-testing.clearHistory",
@@ -508,6 +518,21 @@
         }
       ],
       "view/item/context": [
+        {
+          "command": "mcp-testing.runTestAtCursor",
+          "when": "view == mcp-testing-tests && viewItem == test",
+          "group": "inline@1"
+        },
+        {
+          "command": "mcp-testing.debugTestAtCursor",
+          "when": "view == mcp-testing-tests && viewItem == test",
+          "group": "inline@2"
+        },
+        {
+          "command": "mcp-testing.runTestFile",
+          "when": "view == mcp-testing-tests && viewItem == testFile",
+          "group": "inline"
+        },
         {
           "command": "mcp-testing.runTestsWithTag",
           "when": "view == mcp-testing-tags && viewItem == testTag",
